--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -3,7 +3,7 @@ title: "COVID-19 EN SONORA"
 output: 
   flexdashboard::flex_dashboard:
     navbar:
-      - { title: "11/02/2021", href: "http://www.luisarmandomoreno.com/", align: right }
+      - { title: "12/02/2021", href: "http://www.luisarmandomoreno.com/", align: right }
     theme: flatly
     orientation: rows
 ---
@@ -406,11 +406,15 @@ Casossemana <- Casos %>% group_by(MUNICIPIO) %>%
   left_join(POBMUN, by = "CVEGEO") 
 Casossemana <- Casossemana %>% mutate (INCIDENCIASEM= round((casossemana*100000)/POB,1))
 Casossemana$INCIDENCIASEM[Casossemana$INCIDENCIASEM==0] <- NA
-casossempob <- Casossemana %>% 
-  mutate(IS=if_else(INCIDENCIASEM>(round(quantile(Casossemana$INCIDENCIASEM, 0.90, na.rm=TRUE),0)),1, 
-                    if_else(INCIDENCIASEM>(round(quantile(Casossemana$INCIDENCIASEM, 0.75, na.rm=TRUE),0)),2, 
-                            if_else(INCIDENCIASEM>(round(quantile(Casossemana$INCIDENCIASEM, 0.50, na.rm=TRUE),0)),3,
-                                    if_else(INCIDENCIASEM>(round(quantile(Casossemana$INCIDENCIASEM, 0.25, na.rm=TRUE),0)),4,5))))) %>% filter(Fecha==max(as.Date(Fecha))) 
+# casossempob <- Casossemana %>% 
+#   mutate(IS=if_else(INCIDENCIASEM>(round(quantile(Casossemana$INCIDENCIASEM, 0.90, na.rm=TRUE),0)),1, 
+#                     if_else(INCIDENCIASEM>(round(quantile(Casossemana$INCIDENCIASEM, 0.75, na.rm=TRUE),0)),2, 
+#                             if_else(INCIDENCIASEM>(round(quantile(Casossemana$INCIDENCIASEM, 0.50, na.rm=TRUE),0)),3,
+#                                     if_else(INCIDENCIASEM>(round(quantile(Casossemana$INCIDENCIASEM, 0.25, na.rm=TRUE),0)),4,5))))) %>%
+casossempob <- Casossemana %>% mutate(IS=if_else(INCIDENCIASEM>=99.9,1, 
+                                                 if_else(INCIDENCIASEM>49.9,2,
+                                                         if_else(INCIDENCIASEM>9.9,3,4)))) %>% 
+filter(Fecha==max(as.Date(Fecha))) 
 Casossemanales <- casossempob %>% select(CVEGEO, MUNICIPIO, casossemana, INCIDENCIASEM, IS)
 
 
@@ -421,17 +425,17 @@ Decesossemana <- Decesos %>% group_by(MUNICIPIO) %>%
 Decesossemana <- Decesossemana %>% mutate (MORTALIDADSEM= round((decesossemana*100000)/POB,1))
 Decesossemana$MORTALIDADSEM[Decesossemana$MORTALIDADSEM==0] <- NA
 decesossempob <-Decesossemana %>% 
-mutate(MS=if_else(MORTALIDADSEM>(round(quantile(Decesossemana$MORTALIDADSEM, 0.90, na.rm=TRUE),0)),1, 
-                    if_else(MORTALIDADSEM>(round(quantile(Decesossemana$MORTALIDADSEM, 0.75, na.rm=TRUE),0)),2, 
-                            if_else(MORTALIDADSEM>(round(quantile(Decesossemana$MORTALIDADSEM, 0.50, na.rm=TRUE),0)),3,
-                                    if_else(MORTALIDADSEM>(round(quantile(Decesossemana$MORTALIDADSEM, 0.25, na.rm=TRUE),0)),4,5))))) %>% filter(Fecha==max(as.Date(Fecha)))
+mutate(MS=if_else(MORTALIDADSEM>(round(quantile(Decesossemana$MORTALIDADSEM, 0.75, na.rm=TRUE),0)),1, 
+                    if_else(MORTALIDADSEM>(round(quantile(Decesossemana$MORTALIDADSEM, 0.50, na.rm=TRUE),0)),2, 
+                            if_else(MORTALIDADSEM>(round(quantile(Decesossemana$MORTALIDADSEM, 0.25, na.rm=TRUE),0)),3, 4)))) %>% 
+filter(Fecha==max(as.Date(Fecha)))
 Decesossemanales <- decesossempob %>% select(CVEGEO, MUNICIPIO, decesossemana, MORTALIDADSEM, MS)
 
 
 Mapa <- Indicadores %>%  left_join(diaspmap, by = c("CVEGEO","MUNICIPIO")) %>% 
   left_join(Casossemanales, by = c("CVEGEO","MUNICIPIO")) %>% left_join(Decesossemanales, by = c("CVEGEO","MUNICIPIO"))%>% rename(concat=CVEGEO) %>% 
-  mutate(IA=if_else(INCIDENCIAACUM>1678,1, if_else(INCIDENCIAACUM>1239,2,if_else(INCIDENCIAACUM>708,3,if_else(INCIDENCIAACUM>452,4,5)))))%>% 
-  mutate(MA=if_else(MORTALIDADACUM>184,1, if_else(MORTALIDADACUM>163,2, if_else(MORTALIDADACUM>110,3,if_else(MORTALIDADACUM>80,4,5)))))
+  mutate(IA=if_else(INCIDENCIAACUM>1239,1,if_else(INCIDENCIAACUM>708,2,if_else(INCIDENCIAACUM>452,3,4)))) %>% 
+  mutate(MA=if_else(MORTALIDADACUM>163,1, if_else(MORTALIDADACUM>110,2,if_else(MORTALIDADACUM>80,3,4))))
 
 
 
@@ -443,15 +447,15 @@ capa_munison <- capa_munison %>%  merge(Mapa) %>% merge(NOMMAY)
 #incipal <- low = "#58BCBC", high = "black"
 #incipal <-  colorNumeric(c("#58BCBC", "black"), domain = capa_munison$INCIDENCIA, na.color ="#d9d9d9")
 #mortpal <-  colorNumeric(c("#993366", "black"), domain = capa_munison$MORTALIDAD, na.color ="#d9d9d9")
-diaspal <-  colorFactor(c("#A04A69","#ECA48E", "#FECF7D","#0397A1", "#215968"), levels= c("1","2","3","4","5"), domain = capa_munison$clasfdias, na.color ="#d9d9d9")
-incipal <-  colorFactor(c("#cf597e", "#ed9c72", "#e9e29c", "#71be83", "#009392"), levels= c("1","2","3","4","5"), na.color ="#e8e6e6")
-mortpal <-  colorFactor(c("#cf597e", "#ed9c72", "#e9e29c", "#71be83", "#009392"), levels= c("1","2","3","4","5"), na.color ="#e8e6e6")
+#diaspal <-  colorFactor(c("#A04A69","#ECA48E", "#FECF7D","#0397A1", "#215968"), levels= c("1","2","3","4","5"), domain = capa_munison$clasfdias, na.color ="#d9d9d9")
+incipal <-  colorFactor(c("#CE3F41","#FFA17B","#FECF7D", "#31859C"), levels= c("1","2","3","4"), na.color ="#e8e6e6")
+mortpal <-  colorFactor(c("#CE3F41","#FFA17B","#FECF7D", "#31859C"), levels= c("1","2","3","4"), na.color ="#e8e6e6")
 #discreta <- c("5" = "black", "4" = "#005155","3" = "#01787E","2" = "#01A2AC", "1" = "#58BCBC")
 #incipal <-  colorFactor(c("black","#005155", "#01787E","#01A2AC", "#58BCBC"), levels= c("5","4","3","2","1"), na.color ="#d9d9d9")
 #mortpal <-  colorFactor(c("black","#4D1A33","#73264D", "#993366","#D075A3"), levels= c("5","4","3","2","1"), na.color ="#d9d9d9")
-
-labs <- c("Muy alta","Alta", "Media", "Baja" , "Muy baja")
-diaslab <- c( "0", "1-7", "8-14", "15-30","+30")
+ 
+labs <- c( "Alta", "Substancial", "Moderada","Baja")
+#diaslab <- c( "0", "1-7", "8-14", "15-30","+30")
 
 #ultpal <- ("Días desde que se \n confirmó el último caso", 
  #          values = discreta, breaks= c("5", "4", "3", "2", "1"), 
@@ -818,17 +822,18 @@ $MORTALIDAD = Decesos confirmados * 100 mil / Población$
 
 $LETALIDAD = Decesos confirmados * 100 / Casos confirmados$
 
-La clasificación de la incidencia y la mortalidad municipal se refiere a ordenar de menor a mayor los resultados municipales y tomar los **cuantiles**: 
+La clasificación de la incidencia y la mortalidad municipal en el mapa, se refiere a ordenar de menor a mayor los resultados municipales y clasificar, en el caso de la incidencia de semanales se toman los umbrales de la [ CDC de Estados Unidos ](https://www.cdc.gov/coronavirus/2019-ncov/community/schools-childcare/schools.html)  en las consideraciones para la operación de las escuelas, para el resto de los indicadores se toman los cuantiles: 
 
-**Muy baja:** 0%-25%
+**Clasificación**   | Umbral CDC (Incidencia semanal)    | Rango de cuantiles
 
-**Baja:** 25%-50%
+**Baja:**              | 0-9          | 0%-25%
 
-**Media:** 50%-75%
+**Moderada:**        | 10-49          | 25%-50%
 
-**Alta:** 75%-90%
+**Substancial:**     | 50-99          | 50-75%
 
-**Muy alta:** >90%
+**Alta:**            | ≥ 100        | 75%-100%
+
 
 Por ejemplo, tomando la incidencia semanal, aquellos municipios que se encuentren en la clasificación "Muy alta" se refiere a que pertenecen al 10% de las semanas con mayor incidencia en el Estado.
 
@@ -840,6 +845,8 @@ Captura propia de los reportes diarios de la Secretaría de Salud del Estado de 
 Población de los municipios de Sonora según los resultados del Censo de Población y Vivienda 2020 de INEGI.
 
 [Plataforma Covid-19 del Departamento de Matemáticas de la Universidad de Sonora](https://covid19data.unison.mx/)
+
+[Operating schools during COVID-19: CDC's Considerations](https://www.cdc.gov/coronavirus/2019-ncov/community/schools-childcare/schools.html)
 
 **DESCARGAS**
 
