--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -431,11 +431,15 @@ mutate(MS=if_else(MORTALIDADSEM>(round(quantile(Decesossemana$MORTALIDADSEM, 0.7
 filter(Fecha==max(as.Date(Fecha)))
 Decesossemanales <- decesossempob %>% select(CVEGEO, MUNICIPIO, decesossemana, MORTALIDADSEM, MS)
 
+diaspan <- as.numeric(max(as.Date(Sonora.DF$Fecha)) - as.Date("2020-03-16"))
+Alta <-(99.9/7)*diaspan
+Substancial <-(49.9/7)*diaspan
+Moderada <-(9.9/7)*diaspan
 
 Mapa <- Indicadores %>%  left_join(diaspmap, by = c("CVEGEO","MUNICIPIO")) %>% 
   left_join(Casossemanales, by = c("CVEGEO","MUNICIPIO")) %>% left_join(Decesossemanales, by = c("CVEGEO","MUNICIPIO"))%>% rename(concat=CVEGEO) %>% 
-  mutate(IA=if_else(INCIDENCIAACUM>1239,1,if_else(INCIDENCIAACUM>708,2,if_else(INCIDENCIAACUM>452,3,4)))) %>% 
-  mutate(MA=if_else(MORTALIDADACUM>163,1, if_else(MORTALIDADACUM>110,2,if_else(MORTALIDADACUM>80,3,4))))
+  mutate(IA=if_else(INCIDENCIAACUM>Alta,1,if_else(INCIDENCIAACUM>Substancial,2,if_else(INCIDENCIAACUM>Moderada,3,4)))) %>% 
+  mutate(MA=if_else(MORTALIDADACUM>(Alta/10),1, if_else(MORTALIDADACUM>(Substancial/10),2,if_else(MORTALIDADACUM>(Moderada/10),3,4))))
 
 
 
@@ -573,7 +577,7 @@ mapacovid <- leaflet(capa_munison) %>%
   #           labFormat = function(type, cuts, p) {  
   #             paste0(labs)},
   #           title = "MORTALIDAD", na.label = "N/A")  %>%
-  addLegend(position = "topright", pal = incipal, values = ~capa_munison$IA, opacity=1, group= "INCIDENCIA", 
+  addLegend(position = "topright", pal = incipal, values = ~capa_munison$IS, opacity=1, group= "INCIDENCIA", 
               labFormat = function(type, cuts, p) {  
                paste0(labs)} ,
               title = NULL, na.label = "N/A") 
